--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "project_managment_app",
   "private": true,
   "dependencies": {
+    "@rails/webpacker": "3.5",
+    "babel-preset-react": "^6.24.1",
+    "prop-types": "^15.6.2",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-on-rails": "11.1.3"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "2.11.2"
   }
 }
